Paper insertion and MVP done