@@ -45,7 +45,12 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.papervault.PaperVaultApp</mainClass> </configuration>
+                    <mainClass>com.papervault.PaperVaultApp</mainClass> 
+                    <options>
+                        <option>--add-exports=javafx.graphics/com.sun.glass.utils=ALL-UNNAMED</option>
+                        <option>--enable-native-access=ALL-UNNAMED</option>
+                    </options>
+                </configuration>
             </plugin>
         </plugins>
     </build>
